test_suite/ui/shift_out_of_range.stderr
error: Flag value out of range for u64
 --> ui/shift_out_of_range.rs:8:5
  |
8 |     BigNumber = 1 << 69,
  |     ^^^^^^^^^^^^^^^^^^^

error: Flag value out of range for u16
  --> ui/shift_out_of_range.rs:15:5
   |
15 |     BigNumber = 1 << 20,
   |     ^^^^^^^^^^^^^^^^^^^

error: Flag value out of range for u16
  --> ui/shift_out_of_range.rs:22:5
   |
22 |     BigNumber = (1 << 10) << 10,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0080]: evaluation of constant value failed
 --> ui/shift_out_of_range.rs:8:17
  |
8 |     BigNumber = 1 << 69,
  |                 ^^^^^^^ attempt to shift left by `69_i32`, which would overflow

error[E0080]: evaluation of constant value failed
  --> ui/shift_out_of_range.rs:15:17
   |
15 |     BigNumber = 1 << 20,
   |                 ^^^^^^^ attempt to shift left by `20_i32`, which would overflow
